iosxr.pm: fail on "drbg intiantiate failed" - XR 7.1.3.13
No idea what causes it:

@@ -1906,6 +1906,7 @@
  !!
  !service cli interactive enabled
  !
+ drbg_instantiate failed
  hostname foo
  taskgroup lg
   task read bgp

@@ -1906,7 +1906,6 @@
  !!
  !service cli interactive enabled
  !
- drbg_instantiate failed
  hostname foo
  taskgroup lg
   task read bgp

--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -1077,6 +1077,7 @@ REPEAT:	tr/\015//d;
 	return(0) if ($found_end);		# Only do this routine once
 	return(-1) if (/command authorization failed/i);
 	return(-1) if (/% ?configuration buffer full/i);
+	return(-1) if (/^ *drbg_instantiate failed/i);			# xr7.1
 	/^! no configuration change since last restart/i && next;
 	# skip emtpy lines at the beginning
 	if (!$linecnt && /^\s*$/) {
