fix 1 day, 1 hour, 1 minite

--- a/lib/junos.pm.in
+++ b/lib/junos.pm.in
@@ -444,7 +444,7 @@ sub ShowSystemLicense {
 	last if (/^$prompt/);
 	next if (/^system (shutdown message from|going down )/i);
 	next if (/^\{(master|backup|linecard|primary|secondary)(:(node)?\d+)?\}/);
-	next if (/ (days|hours|minutes)$/);
+	next if (/ (days|day|hours|hour|minutes|minute)$/);
 	return -1 if (/error: select: protocol failure /i);
 	return -1 if (/error: abnormal communication /i);
 
