--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -1282,8 +1282,21 @@ REPEAT:	tr/\015//d;
 	# sort ipv{4,6} access-lists
 	if ($aclfilterseq && /^ipv(4|6) access-list (\S+)\s*$/) {
 	    my($nlri, $key) = ($1, $2);
-	    my($seq, $cmd);
+	    my($seq, $cmd, $regexfilter);
 	    ProcessHistory("ACL $nlri $key","","","$_");
+	    # filter ACL contents
+	    $regexfilter = 0;
+	    if (defined($aclfilterregex) && length($aclfilterregex)) {
+		my($i);
+		my(@regexes) = split('\;', $aclfilterregex);
+		for ($i = 0; $i < ($#regexes + 1); $i++) {
+		    if ($key =~ /$regexes[$i]/) {
+			$regexfilter = 1;
+			ProcessHistory("ACL $nlri $key !", "", "",
+				       "! <$key contents removed by ACLFILTERREGEX>\n");
+		    }
+		}
+	    }
 	    while (<$INPUT>) {
 		tr/\015//d;
 		goto REPEAT if (/^$prompt/ || !/^(\s|\d|!)/);
@@ -1291,6 +1304,7 @@ REPEAT:	tr/\015//d;
 		    ProcessHistory("ACL $nlri $key !", "", "", "$_");
 		    next;
 		}
+		next if ($regexfilter);
 		# ipv4 access-list name
 		#  remark NTP
    		#  deny ipv4 host 224.0.1.1 any
