panos.pm: trip trailing WS & GC unused code - github.com/DarkNinja77

--- a/lib/panos.pm.in
+++ b/lib/panos.pm.in
@@ -101,8 +101,6 @@ TOP: while(<$INPUT>) {
 # This routine parses "show system info"
 sub ShowInfo {
     my($INPUT, $OUTPUT, $cmd) = @_;
-    my($slot);
-
     print STDERR "    In ShowInfo:: $_" if ($debug);
 
     while (<$INPUT>) {
@@ -110,6 +108,7 @@ sub ShowInfo {
 	last if (/^$prompt/);
 	next if (/^(time:|uptime:)/);
 	next if (/^(app|av|global-protect-datafile|threat|wf-private|wildfire|url-filtering)-(version|release-date):/);
+	s/\s+$/\n/;				# remove tailing whitespaces
 
 	ProcessHistory("INFO","","","#$_");
     }
@@ -120,14 +119,13 @@ sub ShowInfo {
 # This routine parses "show chassis inventory"
 sub ShowInventory {
     my($INPUT, $OUTPUT, $cmd) = @_;
-    my($slot);
-
     print STDERR "    In ShowInventory:: $_" if ($debug);
 
     while (<$INPUT>) {
 	tr/\015//d;
 	last if (/^$prompt/);
 	return(1) if (/^Invalid syntax/);
+	s/\s+$/\n/;				# remove tailing whitespaces
 
 	ProcessHistory("INV","","","#$_");
     }
