--- a/bin/nslogin.in
+++ b/bin/nslogin.in
@@ -379,8 +379,10 @@ foreach router [lrange $argv $i end] {
     send "\r"
     expect {
 	-re "\[\r\n]+"		{ exp_continue; }
-	-re "^$prompt"		{ set junk $expect_out(0,string);
-				  regsub -all "\[\]\[]" $junk {\\&} prompt; }
+	-re "^(\[\r\n ]+)?$prompt" {
+				  set junk $expect_out(0,string);
+				  regsub -all "\[\]\[]" $junk {\\&} prompt;
+				}
     }
 
     if { $do_command } {
