--- a/lib/dnos9.pm.in
+++ b/lib/dnos9.pm.in
@@ -363,7 +363,8 @@ sub WriteTerm {
 	# skip crap
  	/^Current Configuration/ && next;
 	/^! (version|last configuration|startup-config last)/i && next;
-
+	# skip empty lines
+	next if (/^\s*$/);
 
 	# Dog gone Cool matches to process the rest of the config
 	/^tftp-server flash /   && next; # kill any tftp remains
