undo local changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # Mac OS X Finder cache files
 .DS_Store
 
-# jetbrains intellij idea
-.idea
-
 # Vim/Emacs metadata and backup files
 .*.swp
 *~
@@ -33,7 +30,9 @@ configure.lineno
 
 # files generated from template input
 Makefile
+autom4te.cache
 config.*
+configure.lineno
 
 a10login
 agmrancid
