--- a/lib/arcos.pm.in
+++ b/lib/arcos.pm.in
@@ -93,6 +93,7 @@ sub ShowVersion {
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
+	return(-1) if (/error: application communication failure/i);
 
 	# drop trailing spaces
 	s/  *$//;
