rancid.conf.sample: fix variable name - Per-Olof Olsson

--- a/etc/rancid.conf.sample.in
+++ b/etc/rancid.conf.sample.in
@@ -75,7 +75,7 @@ RCSSYS=@RCSSYS@; export RCSSYS
 #
 # if ACLFILTERSEQ is NO, prefix-list/access-list sequence numbers will NOT be
 # filtered.  this option implies ACLSORT=NO for lists with sequence numbers.
-#ACLFILTERSEQ=YES; export FILTERSEQ
+#ACLFILTERSEQ=YES; export ACLFILTERSEQ
 #
 # if ACLSORT is NO, access-lists will NOT be sorted.
 #ACLSORT=YES; export ACLSORT
