rancid.types.conf: add an example definition for cisco-ucs

--- a/etc/rancid.types.conf
+++ b/etc/rancid.types.conf
@@ -4,6 +4,18 @@
 # them.  If you override existing types, it will be harder to provide support
 # to you and we will secretly despise you.
 #
+# Collect UCS and its nexus switch.  This is not the cleanest nor complete.
+cisco-ucs;script;rancid -t cisco-ucs
+cisco-ucs;login;clogin
+cisco-ucs;module;nxos
+cisco-ucs;inloop;nxos::inloop
+cisco-ucs;command;nxos::ShowVersion;show version | no more
+cisco-ucs;command;nxos::WriteTerm;show configuration | no more
+cisco-ucs;command;rancid::RunCommand;connect nxos
+cisco-ucs;command;nxos::ShowVersion;show version
+cisco-ucs;command;nxos::WriteTerm;show running-config
+cisco-ucs;command;rancid::RunCommand;exit
+#
 # The jlocal example device type for Juniper JUNOS is a copy of the normal
 # juniper type, except that it pipes the show configuration output to display
 # set.
