nxos.pm: filter logflahs: icamsql db new in nexos 10.2
+ !Flash: logflash:       32768    Nov 12 02:19:18 2021  icamsql_1_1.db-shm
+ !Flash: logflash:     4148872    Nov 12 02:19:18 2021  icamsql_1_1.db-wal

https://shrubbery.net/pipermail/rancid-discuss/2021-November/011109.html

--- a/lib/nxos.pm.in
+++ b/lib/nxos.pm.in
@@ -510,7 +510,7 @@ sub DirSlotN {
 
 	next if (/BufferMonitor-1HourData/);
 
-	if (/( debug_logs| log)\/$/) {
+	if (/( debug_logs| log| icamsql[^.]*\.db.*)\/$/) {
 	    # change
 	    #         8192    Jan 08 14:05:05 2015  log/
 	    # to
