--- a/lib/routeros.pm.in
+++ b/lib/routeros.pm.in
@@ -18,6 +18,9 @@ our @ISA = qw(Exporter);
 
 use rancid @VERSION@;
 
+our $Export;				# Only run Export() once
+
+
 @ISA = qw(Exporter rancid main);
 #XXX @Exporter::EXPORT = qw($VERSION @commandtable %commands @commands);
 
@@ -163,11 +166,14 @@ sub Export {
 
     while (<$INPUT>) {
 	tr/\015//d;
-	if (/$prompt/) { $found_end=1; $clean_run=1; return 0};
+	if (/$prompt/) { $found_end = 1; $clean_run = 1; return 0};
 	next if(/^(\s*|\s*$cmd\s*)$/);
 	next if(/^#/);
+	return(1) if /(expected end of command )/;	# ie: unknown argument
 	return(1) if /(bad command name )/;
 	s/^\s+//g;
+
+	return(0) if ($routeros::Export);
 
 	# RouterOS splits long lines with backslashes - this re-joins them
 	if (/\\\n$/) {
@@ -191,6 +197,7 @@ sub Export {
 	    $buffer = "";
 	}
     }
+    $routeros::Export = 1;
 }
 
 1;
