Missed one of the matches in 12aed6af42. sros.pm: filter new/changed timestamps in configs for 21.10.R1

--- a/lib/sros.pm.in
+++ b/lib/sros.pm.in
@@ -530,7 +530,7 @@ sub WriteTermMD {
 	}
 
 	# end of config.
-	if ((/^(# finished \S{3} \S{3} |\[\]\s*$)/i) && $linecnt > 5) {
+	if ((/^(# finished |\[\]\s*$)/i) && $linecnt > 5) {
 	    $found_end = 1;
 	    return(0);
 	}
