clogin.in: catch More prompts for IOS-XR in admin mode
When using "admin show ...", the "more" prompt is in reverse video. It
is not possible to disable it with "terminal length 0" when running as
a read-only user (dunno why exactly, it works with a fully privileged
user).

- `^[[7m--More--^[[27m`
- `^[[7m(END)^[[27m`

Catch them both. We do not require to start at the beginning because
"(END)" prompt can replace the "--More--" prompt without displaying
any new line.

--- a/bin/clogin.in
+++ b/bin/clogin.in
@@ -392,6 +392,7 @@ proc run_commands { prompt command } {
 	send -- "[subst -nocommands [lindex $commands $i]]\r"
 	expect {
 	    -re "^\b+"				{ exp_continue }
+	    -re "^\x1b\\\[\[0-9]D\x1b\\\[K"	{ exp_continue }
 	    -re "^\[^\n\r *]*$reprompt"		{ send_user -- "$expect_out(buffer)"
 						}
 	    -re "^\[^\n\r]*$reprompt."		{ send_user -- "$expect_out(buffer)"
@@ -422,6 +423,11 @@ proc run_commands { prompt command } {
 						  exp_continue }
 	    -re "^<-+ More -+>\[^\n\r]*"	{
 						  send_user -- "$expect_out(buffer)"
+						  send " "
+						  exp_continue }
+            # IOS-XR in admin mode (the prompt can appear at the end of the line!)
+	    -indices -re "(.*)\x1b\\\[7m(--More--|\\(END\\))\x1b\\\[27m$" {
+						  send_user -- "$expect_out(1,string)"
 						  send " "
 						  exp_continue }
 	}
