--- a/configure.ac
+++ b/configure.ac
@@ -544,6 +544,7 @@ AC_CONFIG_FILES(bin/mtlogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/nlogin bin/nrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/noklogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/nslogin bin/nsrancid, [chmod a+x $ac_file])
+AC_CONFIG_FILES(bin/oglogin bin/ograncid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/panlogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/rblogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/rivlogin bin/rivrancid, [chmod a+x $ac_file])
