--- a/etc/rancid.conf.sample.in
+++ b/etc/rancid.conf.sample.in
@@ -11,6 +11,8 @@ LC_COLLATE="POSIX"; export LC_COLLATE
 # Create files w/o world read/write/exec permissions, but read/exec permissions
 # for group.
 umask 027
+# Mask used to create dir if tree was created on config dir
+UMASK=2750
 #
 # Set the perl module search path.  perl -V shows the default
 PERL5LIB="@pkglibdir@"; export PERL5LIB
@@ -59,6 +61,8 @@ SENDMAIL="@SENDMAIL@"
 CVSROOT=$BASEDIR/CVS; export CVSROOT
 # Location of log files produced by rancid-run(1).
 LOGDIR=$BASEDIR/logs; export LOGDIR
+# If you prefer to have only one log file for rancid, uncomment this variable
+#LOGFILE=rancid-run.log; export LOGFILE
 #
 # Select which RCS system to use, "cvs" (default), "svn" or "git".  Do not
 # change this after CVSROOT has been created with rancid-cvs.  Changing between
